Finally managed to persuade Kiro that it has been writing a lot of duplicate code